refactor(core): remove lots of compilation warning