@@ -66,7 +66,7 @@ public class H2Functions {
         if (jq.isEmpty()) {
             return null;
         }
-        JsonNode node = jq.get(0);
+        JsonNode node = jq.getFirst();
 
         if (node instanceof NullNode) {
             return null;
@@ -77,7 +77,7 @@ public class H2Functions {
 
     @SneakyThrows
     private static <T> List<T> jqArray(String value, String expression, Function<JsonNode, T> function) {
-        JsonNode node = H2Functions.jq(value, expression).get(0);
+        JsonNode node = H2Functions.jq(value, expression).getFirst();
 
         if (!(node instanceof ArrayNode)) {
             return List.of();
@@ -86,6 +86,6 @@ public class H2Functions {
         return StreamSupport
             .stream(node.spliterator(), false)
             .map(function::apply)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
